tests/valid/61015_multiple_expressions/multiple_expressions.agu
-- Author: 61015, Filipe Lopes

let compute (x : Int) : Int =
  let y : Int = x + 10;
  let z : Int = y * 2;
  z - 5;
print(compute(5));