tests/invalid-syntax/61015_wrong_arguments/wrong_arguments.agu
-- Author: 61015, Filipe Lopes

let add (x, y) : (Int, Int) -> Int = x + y;
print(add(5));  